--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,15 @@
 {
-  "name": "Qt6 C++ Dev Container",
+  "name": "Qt6 QML C++ Dev",
   "build": {
     "dockerfile": "Dockerfile"
   },
-  "postCreateCommand": "sudo apt update && sudo apt install -y qt6-base-dev qt6-declarative-dev qt6-tools-dev-tools",
+  "settings": {
+    "terminal.integrated.defaultProfile.linux": "bash"
+  },
   "extensions": [
     "ms-vscode.cpptools",
     "ms-vscode.cmake-tools"
-  ]
+  ],
+  "postCreateCommand": "cmake -S . -B build && cmake --build build",
+  "remoteUser": "vscode"
 }
